--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
       "react-app/jest"
     ]
   },
+ "engines": {
+    "node": "17.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
