--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "axios": "0.24.0",
     "chroma-js": "2.1.2",
     "eslint": "^7.11.0",
+    "express": "^4.18.1",
+    "express-favicon": "^2.0.1",
+    "path": "^0.12.7",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
@@ -47,10 +50,11 @@
     "web-vitals": "1.0.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "node server.js",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "devstart": "react-scripts --openssl-legacy-provider start",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start"
   },
   "eslintConfig": {
@@ -59,7 +63,7 @@
       "react-app/jest"
     ]
   },
- "engines": {
+  "engines": {
     "node": "17.0.0"
   },
   "browserslist": {
