--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "web-vitals": "1.0.1"
   },
   "scripts": {
-    "start": "node server.js",
+    "predeploy": "react-scripts --openssl-legacy-provider build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
