--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     ]
   },
   "engines": {
-    "node": "17.0.0"
+    "node": "<=14.x.x",
+  "npm": "<=6.x.x"
   },
   "browserslist": {
     "production": [
