--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "predeploy": "react-scripts --openssl-legacy-provider build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "devstart": "react-scripts --openssl-legacy-provider start",
